src/Page-Styles/pageStyles.css
.wrapper{
    height: 90vh;
    width: 100%;
    overflow-y: hidden;
    background-color: #EBECF0;
}


.heading{    
    font-size: 25px;
    padding: 15px 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.list-items{
    list-style-type: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}



.list-item{
    text-align: center;
    box-shadow:  inset 2px 2px 5px #BABECC, inset -5px -5px 10px #FFF;
    width: 40%;
    margin-top: 10px;
    box-sizing: border-box;
    border: 0;
    outline: 0;
    font-size: 20px;
    border-radius: 25px;
    padding: 15px;
    background-color: #EBECF0;
    text-shadow: 1px 1px 0 #FFF;
}   


.details{
    padding-top: 5px;
    font-size: 12px;
    font-family: sans-serif;
}

